add most of the tests